# quant-research-lab

./: .gitignore  README.md  flux-v2-module-search-starter.md  pyproject.toml
.cursor/rules/: project.mdc
docs/: README.md  ai-project-instructions.md  current-working-plan.md  lessons-log.md  m4-backtest-engine-design.md  m5-orb-mnq-smoke-results.md  m6-nt8-reproduction.md  nt8-backtest-methodology.md  phase-1-detailed-plan.md  phase-2-kickoff.md  program-charter.md  research-log.md
docs/nt8-artifacts/: flux-v1-quad-module.csv
docs/nt8-screenshots/: README.md
notebooks/validation/: 2026-05-14_wave0_orb_opt3_graded_baseline.json  2026-05-14_wave0_orb_opt3_graded_baseline.md  2026-05-16_wave0b_rq_methodology.json  2026-05-16_wave0b_rq_methodology.md  2026-05-17_wave0c_orb_opt3_two_gate_baseline.json  2026-05-17_wave0c_orb_opt3_two_gate_baseline.md  m1_environment_smoke_test.ipynb
scripts/: run_m6_orb_baseline.py  run_wave0_orb_opt3_baseline.py  run_wave0b_rq_methodology.py  run_wave0c_orb_opt3_two_gate_baseline.py
tests/: test_apex_eod_trailing.py
tests/backtest/: test_account.py  test_engine_end_flatten.py  test_engine_integration.py  test_engine_smoke.py  test_fill_resolution.py  test_m6_metrics.py  test_omat.py  test_orb_mnq_month_smoke.py  test_orb_module.py  test_session_hygiene.py  test_tick.py  test_trade_ledger.py
tests/data/: test_continuous_contract.py  test_data_loader.py  test_quality.py  test_session.py
tests/indicators/: test_atr.py  test_moving_average.py  test_opening_range.py  test_volume_profile.py  test_vwap.py  test_williams_r.py
tests/statistics/: test_bootstrap.py  (+6 more)
(+50 files in other folders)
