[project]
name = "flux-research"
version = "0.0.1"
description = "Phase 1 Python research infrastructure for the Flux/Onyx systematic trading program."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Christian Mack" }]
license = { text = "Proprietary" }

dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pandas-ta>=0.4.71b0",
    "plotly>=6.7.0",
    "polars>=1.40.1",
    "scipy>=1.17.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flux_research"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"notebooks/**/*.py" = ["E402"]  # allow imports below cell-level setup
"tests/**/*.py" = ["N802", "N803"]  # test names

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
